fixes button text alignment

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -9,6 +9,7 @@
   cursor: pointer;
   transition: opacity $default-transition-duration $default-transiton-type;
 
+  text-align: center;
   border-radius: $border-radius-small;
 
   &:hover {
